apps/system-tools/openbao/overlays/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao
  namespace: openbao
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  tls:
    - hosts:
        - openbao.support4u.se
      secretName: openbao-tls
  rules:
    - host: openbao.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao
                port:
                  number: 8200
